--- a/src/app/pages/intro/intro.component.scss
+++ b/src/app/pages/intro/intro.component.scss
@@ -1,6 +1,9 @@
+:host {
+    z-index: 1000;
+}
 video {
     height: 100%; width: 100%;
-    position: fixed; top: 0; left: 0; z-index: 999; 
+    position: fixed; top: 0; left: 0; z-index: 1000;
     object-fit: cover; background: black;
 }
 
